2008-06-10 Fix text baseline alignment bug.  [ 1985420 ] Repair of
           baseline alignment in Text._get_layout.  Thanks Stan West -
           MGD

2008-06-09 Committed Gregor's image resample patch to downsampling
           images with new rcparam image.resample - JDH

2008-06-09 Don't install Enthought.Traits along with matplotlib. For
           matplotlib developers convenience, it can still be
           installed by setting an option in setup.cfg while we figure
           decide if there is a future for the traited config - DSD

2008-06-09 Added range keyword arg to hist() - MM

2008-06-07 Moved list of backends to rcsetup.py; made use of lower
           case for backend names consistent; use validate_backend
           when importing backends subpackage - EF

2008-06-06 hist() revision, applied ideas proposed by Erik Tollerud and
           Olle Engdegard: make histtype='step' unfilled by default
           and introduce histtype='stepfilled'; use default color
           cycle; introduce reverse cumulative histogram; new align
           keyword - MM

2008-06-06 Fix closed polygon patch and also provide the option to
           not close the polygon - MGD

2008-06-05 Fix some dpi-changing-related problems with PolyCollection,
           as called by Axes.scatter() - MGD

2008-06-05 Fix image drawing so there is no extra space to the right
           or bottom - MGD

2006-06-04 Added a figure title command subtitle as a Figure method
           and pyplot command -- see examples/figure_title.py - JDH

2008-06-02 Added support for log to hist with histtype='step' and fixed
           a bug for log-scale stacked histograms - MM

===============================================================
2008-05-29 Released 0.98.0 at revision 5314

2008-05-29 matplotlib.image.imread now no longer always returns RGBA
           -- if the image is luminance or RGB, it will return a MxN
           or MxNx3 array if possible.  Also uint8 is no longer always